[package]
name = "wnfslib-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "wnfslib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
wnfs = {git= "https://github.com/wnfs-wg/rs-wnfs.git", tag="wnfs-v0.1.22"}
wnfsutils = { git = "https://github.com/functionland/wnfs-utils.git", tag = "0.1.22" }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
anyhow = "1.0.66"
serde = "1.0.149"
serde_json = "1.0.89"
chrono = "0.4.22"
crc32fast = "1.3.2"
env_logger = "0.10.0"
log = "0.4.14"
image = "0.24.2"
url = { version = "2.2.2", features = ["serde"] }
rand = "0.8.5"
kv = "0.24.0"


jni = { version = "0.19.0", default-features = false }
android_logger = "0.11.0"
ndk = "0.6.0"
