[package]
name = "wnfslib-android"
version = "1.8.1"
edition = "2021"

# [workspace]
# members = ["jvm"]

[lib]
name = "wnfslib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
wnfs = { git = "https://github.com/wnfs-wg/rs-wnfs.git", branch = "main" }
wnfsutils = { git = "https://github.com/functionland/wnfs-utils.git", tag = "v1.1.5" }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
anyhow = "1.0.66"
serde = "1.0.149"
serde_json = "1.0.89"
chrono = "0.4.22"
crc32fast = "1.3.2"
env_logger = "0.10.0"
log = "0.4.14"
image = "0.24.2"
url = { version = "2.2.2", features = ["serde"] }
rand = "0.8.5"
kv = "0.24.0"
sha256 = "1.1.1"
once_cell = "1.17.0"
libc = "0.2.139"


jni = { version = "0.19.0" }
android_logger = "0.11.0"
# comment this while debbuging using vscode+rust-plugin.
# ndk = "0.6.0"

[dev-dependencies]
jvm = {path = "jvm"}

[dev-dependencies.jni]
features = ["invocation"]