[package]
name = "wnfslib-android"
version = "1.8.2"
edition = "2021"

[lib]
name = "wnfslib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
wnfs = { git = "https://github.com/wnfs-wg/rs-wnfs.git", rev = "491ce8555d811477e934e6a1a6b6e0d347a32357" }
wnfsutils = { git = "https://github.com/functionland/wnfs-utils.git", tag = "v1.1.7" }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
anyhow = "1.0.66"
serde = "1.0.149"
serde_json = "1.0.89"
chrono = "0.4.22"
crc32fast = "1.3.2"
env_logger = "0.11.5"
log = "0.4.14"
image = "0.25.5"
url = { version = "2.2.2", features = ["serde"] }
rand = "0.8.5"
kv = "0.24.0"


jni = { version = "0.21.1", default-features = false }
android_logger = "0.14.1"
# comment this while debbuging using vscode+rust-plugin.
ndk = "0.9.0"
