[package]
name = "wnfsutils"
version = "0.1.7"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wnfs = {path = "../wnfs" }
chrono = "0.4.22"
crc32fast = "1.3.2"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
libipld = { version = "0.15", features = ["dag-cbor", "derive", "serde-codec"] }
kv = "0.24.0"
async-std = "1.12.0"
multihash = "0.18.0"
rand_core = "0.6.4"
serde = "1.0.149"
serde_json = "1.0.89"
anyhow = "1.0.66"
async-trait = "0.1.58"
log = "0.4.14"
sha3 = "0.10"