[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "jvm"
# path = "src/lib.rs"
[dependencies]
jni = { version = "0.19.0",  features = ["invocation"] }
[build-dependencies.walkdir]
version = "2"